# BattleShipsPlusPlus

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  battleships.cpp
inc/BattleshipsPlusPlus/: BattleshipsBot.h  BattleshipsPlusPlus.h
inc/BattleshipsPlusPlus/BattleshipsLogic/: Board.h  GameState.h  Ship.h
inc/BattleshipsPlusPlus/DrawBattleships/: GridTile.h  Screen.h
src/: CMakeLists.txt
src/BattleshipsBot/: CMakeLists.txt  MakeMove.cpp  PlaceShips.cpp
src/BattleshipsLogic/: Board.cpp  CMakeLists.txt  Ship.cpp
src/DrawBattleships/: CMakeLists.txt  Screen.cpp
